--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,10 +2,11 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: black;
+    background-color: grey;
 }
 
-#jser {
+.jser-test {
     width: 100%;
-    height: 100%;
+    height: 300px;
+    margin-bottom: 20px;
 }
