--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,11 +2,12 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: grey;
+    background-color: lightslategrey;
 }
 
 .jser-test {
     width: 100%;
-    height: 300px;
+    height: 250px;
     margin-bottom: 20px;
+    border: 2px inset;
 }
