--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,13 +1,23 @@
+* { box-sizing: border-box; }
+
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: lightslategrey;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+}
+
+.cell {
+    width: 50%;
+    height: 100%;
+    float: left;
 }
 
 .jser-test {
     width: 100%;
-    height: 300px;
-    margin-bottom: 20px;
-    border: 2px inset;
+    height: 100%;
 }
